computing power, csv export